--- a/css/styles.css
+++ b/css/styles.css
@@ -351,7 +351,7 @@ button {
   color: var(--accent-txt-bg-cl);
 }
 
-/* .header-nav-link.current::after {
+.header-nav-link.current::after {
   content: '';
   position: absolute;
   bottom: 0;
@@ -360,7 +360,7 @@ button {
   height: 4px;
   border-radius: 2px;
   background-color: var(--accent-txt-bg-cl);
-} */
+}
 
 /* Header Contacts */
 
