--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,13 @@
   /* GREEN- */
 
 
+  /* MODAL */
+
+  --modal-bg-cl: rgba(46, 47, 66, 0.4);
+  --modal-window-bg-cl: #FCFCFC;
+
+
+
 
   /* BORDER COLORS */
 
@@ -889,5 +896,51 @@ button {
   margin: 8px;
 
   fill: var(--borders-light-cl);
+
+}
+
+/**
+  |============================
+  | Modal window
+  |============================
+*/
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background-color: var(--modal-bg-cl);
+}
+
+.modal {
+
+  position: absolute;
+  top: 88px;
+  left: 516px;
+  width: 408px;
+  height: 576px;
+
+  border-radius: 4px;
+  background-color: var(--modal-window-bg-cl);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  transform: translateX(50%) translateY(50%);
+
+
+
+}
+
+.modal-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 112px;
+  left: 876px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
 
 }
